--- a/templates/core/dashboard.html
+++ b/templates/core/dashboard.html
@@ -91,11 +91,11 @@
             <div class="d-flex justify-content-between align-items-center">
                 <div>
                     <div class="text-white-50 small mb-1">Today's Revenue</div>
-                    <div class="h2 mb-0 fw-bold">${{ today_revenue|floatformat:2 }}</div>
+                    <div class="h2 mb-0 fw-bold">{{ today_revenue|floatformat:2 }} DT</div>
                     <small class="text-white-75">{{ today_sales_count }} transactions</small>
                 </div>
                 <div class="align-self-center">
-                    <i class="fas fa-dollar-sign fa-3x opacity-75"></i>
+                    <i class="fa-solid fa-money-bill fa-3x opacity-75"></i>
                 </div>
             </div>
         </div>
