--- a/templates/inventory/medicine_form.html
+++ b/templates/inventory/medicine_form.html
@@ -96,7 +96,7 @@
                                             {% endif %}
                                         </div>
                                     </div>
-                                    <!-- <div class="col-md-4">
+                                     <div class="col-md-4">
                                         <div class="mb-3">
                                             <label for="{{ form.strength.id_for_label }}" class="form-label">{{ form.strength.label }}</label>
                                             {{ form.strength }}
@@ -106,8 +106,8 @@
                                                 </div>
                                             {% endif %}
                                         </div>
-                                    </div> -->
-                                    <!-- <div class="col-md-4">
+                                    </div>
+                                    <div class="col-md-4">
                                         <div class="mb-3">
                                             <label for="{{ form.barcode.id_for_label }}" class="form-label">{{ form.barcode.label }}</label>
                                             {{ form.barcode }}
@@ -117,7 +117,7 @@
                                                 </div>
                                             {% endif %}
                                         </div>
-                                    </div> -->
+                                    </div> 
                                 </div>
                                 
                                 <div class="row">
