--- a/templates/base.html
+++ b/templates/base.html
@@ -564,6 +564,18 @@
                     card.classList.add('fade-in-up');
                 }, index * 100);
             });
+            
+            // Auto-hide messages after 7 seconds
+            const messages = document.querySelectorAll('.alert');
+            messages.forEach(message => {
+                setTimeout(() => {
+                    message.style.transition = 'opacity 0.5s ease-out';
+                    message.style.opacity = '0';
+                    setTimeout(() => {
+                        message.remove();
+                    }, 500);
+                }, 7000);
+            });
         });
         
         // Loading button animation
