--- a/templates/inventory/category_form.html
+++ b/templates/inventory/category_form.html
@@ -21,7 +21,7 @@
         <div class="col-md-6 offset-md-3">
             <div class="card">
                 <div class="card-body">
-                    <form method="post" enctype="multipart/form-data" novalidate>
+                    <form method="post">
                         {% csrf_token %}
                         
                         {% if form.non_field_errors %}
