--- a/templates/inventory/category_list.html
+++ b/templates/inventory/category_list.html
@@ -3,6 +3,7 @@
 {% block title %}Categories{% endblock %}
 
 {% block content %}
+
 <div class="container-fluid">
     <!-- Modal de confirmation -->
     <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
@@ -32,7 +33,13 @@
     <div class="row mb-4">
         <div class="col-12">
             <div class="d-flex justify-content-between align-items-center">
-                <h1><i class="fas fa-tags me-2"></i>Categories</h1>
+              <div>
+                 <h1>
+                    <i class="fas fa-tags me-2"></i>Categories
+                </h1>
+                <p class="text-muted">Manage medicine categories</p>
+              </div>
+              <div>
                 <a href="{% url 'inventory:category_create' %}" class="btn btn-primary">
                     <i class="fas fa-plus me-2"></i>Add Category
                 </a>
