--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -20,7 +20,8 @@
     }
 
     body {
-      background: #f9fafb;
+      
+      background-color: #ffffff !important;
       min-height: 100vh;
       font-family: 'Inter', sans-serif;
       display: flex;
